Interpretations added to Multivariate EDA

--- a/notebooks/1_Data_Cleaning.ipynb
+++ b/notebooks/1_Data_Cleaning.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Alabama Crash Data 2018 – Data Quality and Cleaning\n",
     "\n",
-    "This notebook focuses on **Step 2** of our project workflow: load, tidy, and assess data quality for the 2018 Alabama crash dataset (22 selected variables).\n",
+    "This notebook covers **Task - 1: Data Quality and Cleaning**. We load, tidy, and assess data quality for the 2018 Alabama crash dataset (22 selected variables).\n",
     "\n",
     "## Goals:\n",
     "- Verify that each row represents a single crash event.\n",
