--- a/notebooks/4_Multivariate_EDA.ipynb
+++ b/notebooks/4_Multivariate_EDA.ipynb
@@ -1,34 +1,18 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "0",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2",
-   "metadata": {},
    "source": [
-    "# Multivariate EDA: Exploration of Relationship Among Variables \n",
+    "# Multivariate Analysis of Crash Severity \n",
     "\n",
-    "Exploring how several variables relate and interact with one another simultaneously. This involves computing and interpreting a correlation matrix to understand linear relationships among numerical variables, creating heatmaps to visualize patterns and produce pairwise relationship plots to observe trends, distributions, and interactions across all selected variables. \n"
+    "This notebook covers **Task - 4: Multivariate Analysis and Transformations**. We model crash severity (PDO, Minor, Serious, Fatal) as an ordered outcome and study how roadway, driver, and environmental factors jointly relate to more severe outcomes. Based on our bivariate outcomes, we identified some variable such as Weekend, Raised median, County, Number of lanes, Driver gender, and Driver Age had minimal impact on severity. However we keep all the variables (except county (too many categories) and Driver BAC(only for DUI cases)) to develop a full model. Rhen based on signifivcance we aim to develp a reduced model.  \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3",
+   "id": "1",
    "metadata": {},
    "source": [
     "# 4.1 Setup and Data Loading"
@@ -37,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,10 +38,55 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3",
+   "metadata": {},
+   "source": [
+    "# 4.1.1 Selection of Key Variables from Earlier EDA\n",
+    "Based on our bivariate outcomes, we identified some variable such as County, Number of lanes, Number of Vehicles, and Driver gender had minimal impact on severity. We excluded them from multivariate analysis. Also Driver BAC was available only for a very few DUI cases, so this variable is also excluded. To deal with skewness, AADT is transformed into a log version."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# select key variables\n",
+    "multi_vars = [\n",
+    "    \"Crash Severity\",\n",
+    "    \"Weekend\",\n",
+    "    \"Time of Day\",\n",
+    "    \"Area Type\",\n",
+    "    \"Functional Class Recode\",\n",
+    "    \"Number of Vehicles Num\",\n",
+    "    \"Curvature\",\n",
+    "    \"Grade\",\n",
+    "    \"Raised Median\",\n",
+    "    \"AADT\",\n",
+    "    \"Speed Limit Num\",\n",
+    "    \"Impact Speed Num\",\n",
+    "    \"Vehicle Type Recode\",\n",
+    "    \"Driver License Validity\",\n",
+    "    \"Crash Manner Recode\",\n",
+    "    \"BAC Available\",\n",
+    "    \"Visibility Obstruction Recode\",\n",
+    "    \"Lighting Conditions Recode\",\n",
+    "    \"Driver Age\",\n",
+    "]\n",
+    "\n",
+    "multi_df = cleaned_df[multi_vars].copy()\n",
+    "\n",
+    "# transform AADT to reduce skew\n",
+    "multi_df[\"log_AADT\"] = np.log1p(multi_df[\"AADT\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5",
    "metadata": {},
    "source": [
-    "# 4.2 Correlation Matrix for all Numeric Variables"
+    "# 4.2 Correlation Among Numeric Variables"
    ]
   },
   {
@@ -67,44 +96,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculating the correaltion among the numeric variables\n",
-    "numeric_vars = [\n",
-    "    \"AADT\",\n",
-    "    \"Number of Lanes Num\",\n",
-    "    \"Number of Vehicles Num\",\n",
+    "num_vars = [\n",
+    "    \"log_AADT\",\n",
     "    \"Speed Limit Num\",\n",
     "    \"Impact Speed Num\",\n",
     "    \"Driver Age\",\n",
-    "    \"Driver BAC\",\n",
+    "    \"Number of Vehicles Num\",\n",
     "]\n",
-    "correlation_matrix = cleaned_df[numeric_vars].corr()\n",
     "\n",
-    "# Visualization of the correlation with heatmap\n",
-    "plt.figure(figsize=(10, 8))\n",
-    "sns.heatmap(correlation_matrix, annot=True, cmap=\"coolwarm\", linewidths=0.5, square=True, cbar=True)\n",
-    "plt.title(\"Correlation Matrix of Numerical Variables\")\n",
-    "plt.grid(False)\n",
-    "plt.show()"
+    "corr_num = multi_df[num_vars].corr()\n",
+    "corr_num"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "**Observations and Interpretation**\n",
-    "\n",
-    "1. Strong Correlations: There is no strong correlation either positive or negative among all the varibales\n",
-    "\n",
-    "2. Moderate Correlations:\n",
-    "  - A positive relationship between speed limit and impact speed (0.56). The speed limit of the roadway positively influenced the impact speed of a crash\n",
-    "  - Positive correlation between AADT and Number of Lanes ( 0.53). AADT increases on roadways with more lanes \n",
-    "    \n",
-    "3. Weak Correlation\n",
-    "   - A negative correlation between number of vehivles and impact speed (-0.38). Impact speed decrease as the number of vehicles involved in a crash increase \n",
-    "   - A very weak negative correlation between driver age and impact speed (-0.12)\n",
-    "\n",
-    "4. Most of the correlations between the variables are negligible, indicating no linear relationship "
+    "plt.figure(figsize=(8, 8))\n",
+    "sns.heatmap(corr_num, annot=True, cmap=\"coolwarm\", vmin=-1, vmax=1)\n",
+    "plt.title(\"Correlation among numeric variables\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -112,21 +127,29 @@
    "id": "8",
    "metadata": {},
    "source": [
-    "# Pairplots to Visualize the Linear Relationship "
+    "## **Observations**\n",
+    "\n",
+    "**Strong Correlations:**\n",
+    "- There is no strong correlation either positive or negative among all the varibales\n",
+    "  \n",
+    "**Moderate Correlations:**\n",
+    "- A positive relationship between speed limit and impact speed (0.56). The speed limit of the roadway positively influenced the impact speed of a crash\n",
+    "    \n",
+    "**Weak Correlation**\n",
+    "- Speed limit and AADT (log) are positively correlated (0.34), for higher AADT roads, speed limit seems to be higher.\n",
+    "- A negative correlation between number of vehicles and impact speed (-0.38). Impact speed decrease as the number of vehicles involved in a crash increase \n",
+    "- A very weak negative correlation between driver age and impact speed (-0.12)\n",
+    "\n",
+    "Most of the correlations between the variables are negligible, indicating no linear relationship "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "9",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Pairplots of the numeric variables\n",
-    "sns.pairplot(cleaned_df[numeric_vars])\n",
-    "plt.suptitle(\"Pairplot of Numerical Variables\", y=1.02)\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
+    "# 4.3 Pairplots to Visualize the Linear Relationships\n",
+    "For better visualization, we use small sample (n = 2000)"
    ]
   },
   {
@@ -135,7 +158,197 @@
    "id": "10",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "severity_palette = {\n",
+    "    \"PDO\": \"green\",\n",
+    "    \"Minor\": \"palegreen\",  # mint-like\n",
+    "    \"Serious\": \"orange\",\n",
+    "    \"Fatal\": \"red\",\n",
+    "}\n",
+    "\n",
+    "sample = multi_df.dropna(\n",
+    "    subset=[\"Crash Severity\", \"log_AADT\", \"Speed Limit Num\", \"Impact Speed Num\", \"Driver Age\"]\n",
+    ").sample(n=2000, random_state=0)\n",
+    "\n",
+    "sns.pairplot(\n",
+    "    sample,\n",
+    "    vars=[\"log_AADT\", \"Speed Limit Num\", \"Impact Speed Num\", \"Driver Age\"],\n",
+    "    hue=\"Crash Severity\",\n",
+    "    palette=severity_palette,\n",
+    "    plot_kws=dict(alpha=0.4, s=20),\n",
+    "    diag_kind=\"hist\",\n",
+    ")\n",
+    "plt.suptitle(\"Pairwise relationships of numeric variables by crash severity\", y=1.02)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11",
+   "metadata": {},
+   "source": [
+    "Since PDO crashes are very high in proportion, lets have a look on the relationships excluding PDO crashes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filter out PDO to focus on higher severities\n",
+    "sample_severe = (\n",
+    "    multi_df[multi_df[\"Crash Severity\"].isin([\"Minor\", \"Serious\", \"Fatal\"])]\n",
+    "    .dropna(\n",
+    "        subset=[\"Crash Severity\", \"log_AADT\", \"Speed Limit Num\", \"Impact Speed Num\", \"Driver Age\"]\n",
+    "    )\n",
+    "    .sample(n=2000, random_state=1)\n",
+    ")\n",
+    "\n",
+    "# IMPORTANT: remove unused 'PDO' category\n",
+    "sample_severe[\"Crash Severity\"] = sample_severe[\"Crash Severity\"].cat.remove_unused_categories()\n",
+    "\n",
+    "severity_palette_no_pdo = {\n",
+    "    \"Minor\": \"palegreen\",\n",
+    "    \"Serious\": \"orange\",\n",
+    "    \"Fatal\": \"red\",\n",
+    "}\n",
+    "\n",
+    "sns.pairplot(\n",
+    "    sample_severe,\n",
+    "    vars=[\"log_AADT\", \"Speed Limit Num\", \"Impact Speed Num\", \"Driver Age\"],\n",
+    "    hue=\"Crash Severity\",\n",
+    "    palette=severity_palette_no_pdo,\n",
+    "    plot_kws=dict(alpha=0.5, s=25),\n",
+    "    diag_kind=\"hist\",\n",
+    ")\n",
+    "plt.suptitle(\"Pairwise relationships (excluding PDO)\", y=1.02)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13",
+   "metadata": {},
+   "source": [
+    "## Observations\n",
+    "- Impact speed vs severity: Fatal (red) and Serious (orange) points tend to occur at higher impact speeds than Minor; the lower‑left of the Impact‑Speed panels is mostly light green.\n",
+    "\n",
+    "- While there is no overall noticable pattern, but impact speed and speed limit appear to have a positive linear relationship for serious and fatal crashes.\n",
+    "\n",
+    "- For fatal crashes (red dots), impact speed seems to be linearly correlated with driver age.\n",
+    "\n",
+    "- Other plots: No clear visual separation by severity; colors are fairly mixed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14",
+   "metadata": {},
+   "source": [
+    "# 4.4 Encoding Crash Severity and Ranking of Variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# simple numeric encoding for severity (ordered)\n",
+    "severity_map = {\"PDO\": 1, \"Minor\": 2, \"Serious\": 3, \"Fatal\": 4}\n",
+    "multi_df[\"Severity_Num\"] = multi_df[\"Crash Severity\"].map(severity_map)\n",
+    "\n",
+    "# choose a small set of important predictors to encode\n",
+    "cat_for_corr = [\n",
+    "    \"Area Type\",\n",
+    "    \"Time of Day\",\n",
+    "    \"Curvature\",\n",
+    "    \"Grade\",\n",
+    "    \"Vehicle Type Recode\",\n",
+    "    \"BAC Available\",\n",
+    "]\n",
+    "\n",
+    "dummies = pd.get_dummies(multi_df[cat_for_corr], drop_first=True)\n",
+    "\n",
+    "corr_with_sev = pd.concat(\n",
+    "    [\n",
+    "        multi_df[[\"Severity_Num\", \"log_AADT\", \"Speed Limit Num\", \"Impact Speed Num\", \"Driver Age\"]],\n",
+    "        dummies,\n",
+    "    ],\n",
+    "    axis=1,\n",
+    ").corr()\n",
+    "\n",
+    "# extract correlations with Severity_Num\n",
+    "corr_sev = corr_with_sev[\"Severity_Num\"].sort_values(ascending=False)\n",
+    "corr_sev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10, 5))\n",
+    "sns.barplot(\n",
+    "    x=corr_sev.values,\n",
+    "    y=corr_sev.index,\n",
+    "    orient=\"h\",\n",
+    "    color=\"orange\",\n",
+    ")\n",
+    "plt.axvline(0, color=\"black\", linewidth=1)\n",
+    "plt.xlabel(\"Correlation with severity (Severity_Num)\")\n",
+    "plt.ylabel(\"Variables\")\n",
+    "plt.title(\"Variables ranked by correlation with crash severity\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# absolute correlations, sorted strongest to weakest\n",
+    "corr_abs = corr_sev.abs().sort_values(ascending=False)\n",
+    "\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "sns.barplot(\n",
+    "    x=corr_abs.values,\n",
+    "    y=corr_abs.index,\n",
+    "    orient=\"h\",\n",
+    "    color=\"orange\",\n",
+    ")\n",
+    "plt.axvline(0, color=\"black\", linewidth=1)\n",
+    "plt.xlabel(\"Correlation with severity (Severity_Num)\")\n",
+    "plt.ylabel(\"Variables\")\n",
+    "plt.title(\"Strength (absolute correlation\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18",
+   "metadata": {},
+   "source": [
+    "## Observations\n",
+    "- **Impact speed** has the strongest positive association with severity (r ≈ 0.21): higher impact speed tends to mean more severe crashes.\n",
+    "\n",
+    "- **Curvature, higher speed limits, nighttime, and grades** all show small positive correlations with severity, consistent with your bivariate results.\n",
+    "\n",
+    "- **BAC available** is also positively related to severity, but modestly.\n",
+    "\n",
+    "- **Urban area and higher AADT** are negatively correlated with severity (r ≈ −0.14 and −0.11), indicating relatively more severe crashes on lower‑AADT, non‑urban roads.\n",
+    "\n",
+    "- **Vehicle type and driver age** show very weak linear correlations with severity in this summary."
+   ]
   }
  ],
  "metadata": {
