--- a/notebooks/3_Bivariate_EDA.ipynb
+++ b/notebooks/3_Bivariate_EDA.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Bivariate EDA: Crash Severity vs Single Factors\n",
     "\n",
-    "This notebook uses the cleaned crash dataset to explore how **Crash Severity** varies with one factor at a time (e.g., area type, functional class, lighting, driver/vehicle factors). In this **Step 4**, we read the cleaned data created in the data‑quality notebook and do not perform any additional cleaning here."
+    "This notebook covers **Task - 3: Bivariate EDA** and uses the cleaned crash dataset to explore how **Crash Severity** varies with one factor at a time (e.g., area type, functional class, lighting, driver/vehicle factors). We read the cleaned data created in the data‑quality notebook and do not perform any additional cleaning here."
    ]
   },
   {
@@ -201,7 +201,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "13",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "print(\"Top 10 ciunties by % of crash severity\")\n",
