Color code of severity in the plots adjusted in 3 and 4

--- a/notebooks/3_Bivariate_EDA.ipynb
+++ b/notebooks/3_Bivariate_EDA.ipynb
@@ -63,13 +63,21 @@
    "source": [
     "spatial_time_vars = [\"Weekend\", \"Time of Day\", \"Area Type\"]\n",
     "\n",
+    "severity_colors = {\n",
+    "    \"Fatal\": \"red\",\n",
+    "    \"Serious\": \"orange\",\n",
+    "    \"Minor\": \"mediumspringgreen\",  # mint-ish green\n",
+    "    \"PDO\": \"green\",\n",
+    "}\n",
+    "\n",
     "for var in spatial_time_vars:\n",
     "    print(f\"\\nCrash severity (%) by {var}\\n\")\n",
     "    ct = pd.crosstab(cleaned_df[\"Crash Severity\"], cleaned_df[var], normalize=\"columns\") * 100\n",
+    "    ct = ct.loc[[\"PDO\", \"Minor\", \"Serious\", \"Fatal\"]]\n",
     "    display(ct.round(1))\n",
     "\n",
     "    fig, ax = plt.subplots(figsize=(7, 4))\n",
-    "    ct.T.plot(kind=\"bar\", stacked=True, ax=ax)\n",
+    "    ct.T.plot(kind=\"bar\", stacked=True, ax=ax, color=[severity_colors[c] for c in ct.index])\n",
     "    ax.set_title(f\"Crash severity by {var}\")\n",
     "    ax.set_xlabel(var)\n",
     "    ax.set_ylabel(\"Crash share by severity (%)\")\n",
@@ -201,11 +209,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "13",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(\"Top 10 ciunties by % of crash severity\")\n",
@@ -285,7 +289,7 @@
     "    display(ct.round(1))\n",
     "\n",
     "    fig, ax = plt.subplots(figsize=(7, 4))\n",
-    "    ct.T.plot(kind=\"bar\", stacked=True, ax=ax)\n",
+    "    ct.T.plot(kind=\"bar\", stacked=True, ax=ax, color=[severity_colors[s] for s in ct.index])\n",
     "    ax.set_title(f\"Crash severity by {var}\")\n",
     "    ax.set_xlabel(var)\n",
     "    ax.set_ylabel(\"Crash share by severity (%)\")\n",
@@ -421,7 +425,7 @@
     "    display(ct.round(1))\n",
     "\n",
     "    fig, ax = plt.subplots(figsize=(8, 4))\n",
-    "    ct.T.plot(kind=\"bar\", stacked=True, ax=ax)\n",
+    "    ct.T.plot(kind=\"bar\", stacked=True, ax=ax, color=[severity_colors[s] for s in ct.index])\n",
     "    ax.set_title(f\"Crash severity by {var}\")\n",
     "    ax.set_xlabel(var)\n",
     "    ax.set_ylabel(\"Crash share by severity (%)\")\n",
@@ -500,7 +504,7 @@
     "display(ct_bac.round(1))\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(6, 4))\n",
-    "ct_bac.T.plot(kind=\"bar\", stacked=True, ax=ax)\n",
+    "ct_bac.T.plot(kind=\"bar\", stacked=True, ax=ax, color=[severity_colors[s] for s in ct.index])\n",
     "ax.set_title(\"Crash severity by BAC category (DUI subset)\")\n",
     "ax.set_xlabel(\"BAC category\")\n",
     "ax.set_ylabel(\"Crash share by severity (%)\")\n",
@@ -556,7 +560,7 @@
     "    display(ct.round(1))\n",
     "\n",
     "    fig, ax = plt.subplots(figsize=(8, 4))\n",
-    "    ct.T.plot(kind=\"bar\", stacked=True, ax=ax)\n",
+    "    ct.T.plot(kind=\"bar\", stacked=True, ax=ax, color=[severity_colors[s] for s in ct.index])\n",
     "    ax.set_title(f\"Crash severity by {var}\")\n",
     "    ax.set_xlabel(var)\n",
     "    ax.set_ylabel(\"Crash share by severity (%)\")\n",
@@ -582,6 +586,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "34",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": []
