--- a/notebooks/4_Multivariate_EDA.ipynb
+++ b/notebooks/4_Multivariate_EDA.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "source": [
     "# 4.1.1 Selection of Key Variables from Earlier EDA\n",
-    "Based on our bivariate outcomes, we identified some variable such as County, Number of lanes, Number of Vehicles, and Driver gender had minimal impact on severity. We excluded them from multivariate analysis. Also Driver BAC was available only for a very few DUI cases, so this variable is also excluded. To deal with skewness, AADT is transformed into a log version."
+    "Based on our bivariate outcomes, we identified some variable such as County, Number of lanes, Number of Vehicles, and Driver gender had minimal impact on severity. We excluded them from multivariate analysis. To deal with skewness, AADT is transformed into a log version."
    ]
   },
   {
@@ -73,6 +73,7 @@
     "    \"Visibility Obstruction Recode\",\n",
     "    \"Lighting Conditions Recode\",\n",
     "    \"Driver Age\",\n",
+    "    \"Driver BAC\",\n",
     "]\n",
     "\n",
     "multi_df = cleaned_df[multi_vars].copy()\n",
@@ -102,6 +103,7 @@
     "    \"Impact Speed Num\",\n",
     "    \"Driver Age\",\n",
     "    \"Number of Vehicles Num\",\n",
+    "    \"Driver BAC\",\n",
     "]\n",
     "\n",
     "corr_num = multi_df[num_vars].corr()\n",
@@ -348,6 +350,104 @@
     "- **Urban area and higher AADT** are negatively correlated with severity (r ≈ −0.14 and −0.11), indicating relatively more severe crashes on lower‑AADT, non‑urban roads.\n",
     "\n",
     "- **Vehicle type and driver age** show very weak linear correlations with severity in this summary."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19",
+   "metadata": {},
+   "source": [
+    "# 4.5 Ranking influencing Factors for DUI Crashes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DUI subset\n",
+    "dui_df = multi_df[multi_df[\"BAC Available\"]].copy()\n",
+    "\n",
+    "# numeric severity\n",
+    "severity_map = {\"PDO\": 1, \"Minor\": 2, \"Serious\": 3, \"Fatal\": 4}\n",
+    "dui_df[\"Severity_Num\"] = dui_df[\"Crash Severity\"].map(severity_map)\n",
+    "\n",
+    "# choose predictors to correlate with severity\n",
+    "cat_for_corr_dui = [\n",
+    "    \"Area Type\",\n",
+    "    \"Time of Day\",\n",
+    "    \"Curvature\",\n",
+    "    \"Grade\",\n",
+    "    \"Vehicle Type Recode\",\n",
+    "    \"Lighting Conditions Recode\",\n",
+    "]\n",
+    "\n",
+    "num_vars_dui = [\"log_AADT\", \"Speed Limit Num\", \"Impact Speed Num\", \"Driver Age\", \"Driver BAC\"]\n",
+    "\n",
+    "dummies_dui = pd.get_dummies(dui_df[cat_for_corr_dui], drop_first=True)\n",
+    "\n",
+    "corr_with_sev_dui = pd.concat([dui_df[[\"Severity_Num\"] + num_vars_dui], dummies_dui], axis=1).corr()\n",
+    "\n",
+    "corr_sev_dui = corr_with_sev_dui[\"Severity_Num\"].sort_values(ascending=False)\n",
+    "corr_abs_dui = corr_sev_dui.abs().sort_values(ascending=False)\n",
+    "\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "sns.barplot(\n",
+    "    x=corr_sev_dui.values,\n",
+    "    y=corr_sev_dui.index,\n",
+    "    orient=\"h\",\n",
+    "    color=\"orange\",\n",
+    ")\n",
+    "plt.axvline(0, color=\"black\", linewidth=1)\n",
+    "plt.xlabel(\"Correlation with severity (Severity_Num)\")\n",
+    "plt.ylabel(\"Variables\")\n",
+    "plt.title(\"Variables ranked by correlation with crash severity for DUI cases\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10, 5))\n",
+    "sns.barplot(\n",
+    "    x=corr_abs_dui.values,\n",
+    "    y=corr_abs_dui.index,\n",
+    "    orient=\"h\",\n",
+    "    color=\"orange\",\n",
+    ")\n",
+    "plt.axvline(0, color=\"black\", linewidth=1)\n",
+    "plt.xlabel(\"Correlation with severity (Severity_Num)\")\n",
+    "plt.ylabel(\"Variables\")\n",
+    "plt.title(\"Strength (absolute correlation) for DUI cases\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22",
+   "metadata": {},
+   "source": [
+    "## Observations\n",
+    "For DUI cases:\n",
+    "- Speed Limit correlation roughly doubles (0.08 → 0.15), suggesting high posted speeds are even more critical for DUI severity.\n",
+    "\n",
+    "- Area Type_Urban becomes more negative (−0.14 → −0.17): DUI severe crashes are especially concentrated in non‑urban settings.\n",
+    "\n",
+    "- Driver Age and Vehicle Type_Other/Truck show slightly stronger positive correlations in the DUI subset. Older people with trucks appears to involve more in severe crashes while DUI. \n",
+    "\n",
+    "- Some lighting categories show clearer roles:\n",
+    "\n",
+    "    - Daylight has a small positive correlation;\n",
+    "\n",
+    "    - Night‑lighted / Illuminated show negative correlations, hinting that better lighting may slightly reduce severity in DUI crashes."
    ]
   }
  ],
