--- a/notebooks/2_Univariate_EDA.ipynb
+++ b/notebooks/2_Univariate_EDA.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Univarite EDA: Basic Analysis of Each Variable\n",
     "\n",
-    "Examination of each of the varibales one at a time to get a basic understanding of their nature in terms of distribution and typical values, outliers among others. Data is from the cleaned data notebook\n"
+    "Examination of each of the variables one at a time to get a basic understanding of their nature in terms of distribution and typical values, outliers among others. Data is from the cleaned data notebook\n"
    ]
   },
   {
@@ -150,12 +150,12 @@
     "    # Overlay jittered points\n",
     "    sns.stripplot(\n",
     "        y=cleaned_df[col],\n",
-    "        color=\"skyblue\",\n",
+    "        color=\"blue\",\n",
     "        alpha=0.5,\n",
     "        size=5,\n",
     "        jitter=True,\n",
     "    )\n",
-    "    # Boxplot (no outlier dots)\n",
+    "    # Boxplot\n",
     "    sns.boxplot(\n",
     "        y=cleaned_df[col],\n",
     "        width=0.3,\n",
@@ -200,7 +200,7 @@
     "\n",
     "    sns.stripplot(\n",
     "        x=sample,\n",
-    "        color=\"skyblue\",\n",
+    "        color=\"blue\",\n",
     "        alpha=0.3,\n",
     "        size=3,\n",
     "        jitter=0.2,\n",
@@ -229,7 +229,20 @@
    "id": "13",
    "metadata": {},
    "source": [
-    "### **Interpretations**"
+    "**Interpretations**\n",
+    "\n",
+    "1. Most of the roadways in the crash dataset have traffic volumes under 5,000 AADT, but there are some roadways with very high AADT that is the outliers.\n",
+    "\n",
+    "2. Speed limits cluster around 35–55 mph, which is typical for urban and suburban roads. There are no extreme outliers, the distribution shows the various roadways within Alabama\n",
+    "\n",
+    "3. Impact speed during crash is mostly low, with some outliers above 80mph indicating severe collisions \n",
+    "\n",
+    "4. The driver age is widely distributed between 20 and 60 years with few outliers due to crashes involving the old, 80 years and above which is typical of crash data\n",
+    "\n",
+    "5. Most drivers recorded a BAC between 0.0 and 0.2, indicating that the majority of crashes was not due to alcohol. However, there are several outliers above 0.30 indicating that some crashes were due to DUI. This reflects the rarity of high-BAC crashes.\n",
+    "\n",
+    "\n",
+    " "
    ]
   },
   {
@@ -244,11 +257,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "15",
-   "metadata": {
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Categorical variables\n",
@@ -325,14 +334,6 @@
     "\n",
     "- Lighting Conditions Recode: Most crashes occur in daylight (72%); dark or night‑related conditions together account for around one‑quarter."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "17",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
