--- a/notebooks/3_Bivariate_EDA.ipynb
+++ b/notebooks/3_Bivariate_EDA.ipynb
@@ -443,8 +443,8 @@
    "source": [
     "driver_num_main = [\"Driver Age\"]\n",
     "\n",
-    "summary_driver_main = cleaned_df.groupby(\"Crash Severity\")[driver_num_main].agg(\n",
-    "    [\"mean\", \"median\", \"std\"]\n",
+    "summary_driver_main = cleaned_df.groupby(\"Crash Severity\", observed=False)[driver_num_main].agg(\n",
+    "    [\"mean\", \"median\", \"std\"], \n",
     ")\n",
     "summary_driver_main"
    ]
@@ -573,14 +573,6 @@
     "\n",
     "- Dusk/dawn and illuminated/night‑lighted conditions fall between dark and daylight, but still show higher Severe shares than daylight alone."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
