--- a/notebooks/4_Multivariate_EDA.ipynb
+++ b/notebooks/4_Multivariate_EDA.ipynb
@@ -5,15 +5,9 @@
    "id": "0",
    "metadata": {},
    "source": [
-    "<<<<<<< local\n",
-    "# Multivariate EDA: Exploration of Relationship Among Variables \n",
-    "\n",
-    "Exploring how several variables relate and interact with one another simultaneously. This involves computing and interpreting a correlation matrix to understand linear relationships among numerical variables, creating heatmaps to visualize patterns and produce pairwise relationship plots to observe trends, distributions, and interactions across all selected variables. \n",
-    "=======\n",
     "# Multivariate Analysis of Crash Severity \n",
     "\n",
-    "This notebook covers **Task - 4: Multivariate Analysis and Transformations**. We model crash severity (PDO, Minor, Serious, Fatal) as an ordered outcome and study how roadway, driver, and environmental factors jointly relate to more severe outcomes. Based on our bivariate outcomes, we identified some variable such as Weekend, Raised median, County, Number of lanes, Driver gender, and Driver Age had minimal impact on severity. However we keep all the variables (except county (too many categories) and Driver BAC(only for DUI cases)) to develop a full model. Rhen based on signifivcance we aim to develp a reduced model.  \n",
-    ">>>>>>> remote"
+    "This notebook covers **Task - 4: Multivariate Analysis and Transformations**. We model crash severity (PDO, Minor, Serious, Fatal) as an ordered outcome and study how roadway, driver, and environmental factors jointly relate to more severe outcomes. Based on our bivariate outcomes, we identified some variable such as Weekend, Raised median, County, Number of lanes, Driver gender, and Driver Age had minimal impact on severity. However we keep all the variables (except county (too many categories) and Driver BAC(only for DUI cases)) to develop a full model. Rhen based on signifivcance we aim to develp a reduced model.  "
    ]
   },
   {
@@ -47,12 +41,8 @@
    "id": "3",
    "metadata": {},
    "source": [
-    "<<<<<<< local\n",
-    "# 4.2 Correlation Matrix for all Numeric Variables\n",
-    "=======\n",
     "# 4.1.1 Selection of Key Variables from Earlier EDA\n",
-    "Based on our bivariate outcomes, we identified some variable such as County, Number of lanes, Number of Vehicles, and Driver gender had minimal impact on severity. We excluded them from multivariate analysis. To deal with skewness, AADT is transformed into a log version.\n",
-    ">>>>>>> remote"
+    "Based on our bivariate outcomes, we identified some variable such as County, Number of lanes, Number of Vehicles, and Driver gender had minimal impact on severity. We excluded them from multivariate analysis. To deal with skewness, AADT is transformed into a log version."
    ]
   },
   {
@@ -62,8 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "<<<<<<< local\n",
-    "# Calculating the correaltion among the numeric variables\n",
+    "# Calculating the correlation among the numeric variables\n",
     "numeric_vars = [\n",
     "    \"AADT\",\n",
     "    \"Number of Lanes Num\",\n",
@@ -81,7 +70,7 @@
     "plt.title(\"Correlation Matrix of Numerical Variables\")\n",
     "plt.grid(False)\n",
     "plt.show()\n",
-    "=======\n",
+    "\n",
     "# select key variables\n",
     "multi_vars = [\n",
     "    \"Crash Severity\",\n",
@@ -109,8 +98,7 @@
     "multi_df = cleaned_df[multi_vars].copy()\n",
     "\n",
     "# transform AADT to reduce skew\n",
-    "multi_df[\"log_AADT\"] = np.log1p(multi_df[\"AADT\"])\n",
-    ">>>>>>> remote"
+    "multi_df[\"log_AADT\"] = np.log1p(multi_df[\"AADT\"])\n"
    ]
   },
   {
@@ -118,7 +106,6 @@
    "id": "5",
    "metadata": {},
    "source": [
-    "<<<<<<< local\n",
     "**Observations and Interpretation**\n",
     "\n",
     "1. Strong Correlations: There is no strong correlation either positive or negative among all the varibales\n",
@@ -132,9 +119,7 @@
     "   - A very weak negative correlation between driver age and impact speed (-0.12)\n",
     "\n",
     "4. Most of the correlations between the variables are negligible, indicating no linear relationship \n",
-    "=======\n",
-    "# 4.2 Correlation Among Numeric Variables\n",
-    ">>>>>>> remote"
+    "\n"
    ]
   },
   {
@@ -142,9 +127,17 @@
    "id": "6",
    "metadata": {},
    "source": [
-    "<<<<<<< local\n",
+    "# 4.2 Correlation Among Numeric Variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Pairplots to Visualize the Linear Relationship \n",
-    "=======\n",
     "num_vars = [\n",
     "    \"log_AADT\",\n",
     "    \"Speed Limit Num\",\n",
@@ -155,36 +148,31 @@
     "]\n",
     "\n",
     "corr_num = multi_df[num_vars].corr()\n",
-    "corr_num\n",
-    ">>>>>>> remote"
+    "corr_num\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "<<<<<<< local\n",
     "# Pairplots of the numeric variables\n",
     "sns.pairplot(cleaned_df[numeric_vars])\n",
     "plt.suptitle(\"Pairplot of Numerical Variables\", y=1.02)\n",
-    "=======\n",
     "plt.figure(figsize=(8, 8))\n",
     "sns.heatmap(corr_num, annot=True, cmap=\"coolwarm\", vmin=-1, vmax=1)\n",
     "plt.title(\"Correlation among numeric variables\")\n",
-    ">>>>>>> remote\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "source": [
-    "<<<<<<< LOCAL CELL DELETED >>>>>>>\n",
     "## **Observations**\n",
     "\n",
     "**Strong Correlations:**\n",
@@ -203,10 +191,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "source": [
-    "<<<<<<< LOCAL CELL DELETED >>>>>>>\n",
     "# 4.3 Pairplots to Visualize the Linear Relationships\n",
     "For better visualization, we use small sample (n = 2000)"
    ]
@@ -214,11 +201,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
-    "<<<<<<< LOCAL CELL DELETED >>>>>>>\n",
     "severity_palette = {\n",
     "    \"PDO\": \"green\",\n",
     "    \"Minor\": \"palegreen\",  # mint-like\n",
@@ -244,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "source": [
     "Since PDO crashes are very high in proportion, lets have a look on the relationships excluding PDO crashes"
@@ -253,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "source": [
     "## Observations\n",
@@ -304,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "source": [
     "# 4.4 Encoding Crash Severity and Ranking of Variables"
@@ -313,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "source": [
     "## Observations\n",
@@ -412,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "source": [
     "# 4.5 Ranking influencing Factors for DUI Crashes"
@@ -421,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22",
+   "id": "23",
    "metadata": {},
    "source": [
     "## Observations\n",
