Requirements for Streamlit app added

--- a/notebooks/4_Multivariate_EDA.ipynb
+++ b/notebooks/4_Multivariate_EDA.ipynb
@@ -98,7 +98,7 @@
     "multi_df = cleaned_df[multi_vars].copy()\n",
     "\n",
     "# transform AADT to reduce skew\n",
-    "multi_df[\"log_AADT\"] = np.log1p(multi_df[\"AADT\"])\n"
+    "multi_df[\"log_AADT\"] = np.log1p(multi_df[\"AADT\"])"
    ]
   },
   {
@@ -137,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pairplots to Visualize the Linear Relationship \n",
+    "# Pairplots to Visualize the Linear Relationship\n",
     "num_vars = [\n",
     "    \"log_AADT\",\n",
     "    \"Speed Limit Num\",\n",
@@ -148,7 +148,7 @@
     "]\n",
     "\n",
     "corr_num = multi_df[num_vars].corr()\n",
-    "corr_num\n"
+    "corr_num"
    ]
   },
   {
