Minor spelling corrections on notebooks

--- a/notebooks/1_Data_Cleaning.ipynb
+++ b/notebooks/1_Data_Cleaning.ipynb
@@ -644,7 +644,7 @@
     "df[\"Curvature\"] = df[\"Roadway Curvature and Grade\"].apply(has_curvature)\n",
     "df[\"Grade\"] = df[\"Roadway Curvature and Grade\"].apply(has_grade)\n",
     "\n",
-    "# Make them categorical if you like\n",
+    "# Make them categorical\n",
     "df[\"Curvature\"] = df[\"Curvature\"].astype(\"category\")\n",
     "df[\"Grade\"] = df[\"Grade\"].astype(\"category\")"
    ]
@@ -741,7 +741,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save full working dataframe (with originals + recodes) if you want\n",
+    "# Save full working dataframe (with originals + recodes)\n",
     "df.to_pickle(\"../data/cleaned/crash_2018_full.pkl\")\n",
     "\n",
     "# Save cleaned analysis dataset\n",
